# lpz-decision-system

./: .gitignore  README.md  pyproject.toml  run.bat  run.ps1
cli/: main.py
data_preparation/: __init__.py  deduplicate_data.py  drop_id.py  preprocess_data.py
gui/: app.py  main_menu_frame.py  main_menu_window.py  predict_frame.py  train_frame.py
lib/: __init__.py  _col_name_class.py  check_columns.py  column_names.py  utils.py
model/: __init__.py  hyperparams.py  train.py
