[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LPZ-NOR-Decision-System"
description = "A decision system to predict whether to fix LPZ diagnosis by diagnosis from NOR"
version = "0.1.0"
authors = [
    {name = "Jozef Kraus"},
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas==2.2.2",
    "scikit-learn==1.5.1",
    "xgboost==2.1.1",
    "ttkbootstrap==1.10.1",
]

[project.scripts]
lpz-nor = "cli.main:main"

# Find all modules in the project
[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Ignore all jupyter notebooks due to its big size
exclude = '''
.*\.ipynb$
'''